
- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Removed zend.ze1_compatibility_mode. (Dmitry)
- Deprecated ticks support. (Felipe)

- Changed PCRE, SPL and reflection extensions to always be enabled. (Marcus)
- Changed md5() to use improved implementation. (Solar Designer, Dmitry)
- Changed mhash to be a wrapper layer around the hash extension. (Scott)

- Improved PHP syntax and semantics:
  . Added lambda functions and closures (Christian Seiler, Dmitry)
  . Added "jump label" operator (limited "goto"). (Dmitry, Sara)
  . Added NOWDOC syntax. (Gwynne Raskind, Stas, Dmitry)
  . Added HEREDOC syntax with double quotes. (Lars Strojny, Felipe)
  . Added "?:" operator. (Marcus)
  . Added support for namespaces. (Dmitry, Stas, Gregory)
  . Added support for Late Static Binding. (Dmitry, Etienne Kneuss)
  . Added support for __callstatic() magic method. (Sara)
  . Added forward_static_call(_array) to complete LSB. (Mike Lively)
  . Added support for dynamic access of static members using $foo::myFunc().
    (Etienne Kneuss)
  . Improved checks for callbacks. (Marcus)
  . Added __DIR__ constant. (Lars Strojny)
  . Added PHP_MAJOR_VERSION, PHP_MINOR_VERSION, PHP_RELEASE_VERSION,
    PHP_EXTRA_VERSION, PHP_VERSION_ID, PHP_ZTS and PHP_DEBUG constants.
    (Pierre)
  . Added new error modes E_USER_DEPRECATED and E_DEPRECATED.
    E_DEPRECATED is used to inform about stuff being scheduled for removal
    in future PHP versions. (Lars Strojny, Felipe, Marcus)
  . Added "request_order" INI variable to control specifically $_REQUEST
    behavior. (Stas)
  . Added support for exception linking. (Marcus)
  . Added ability to handle exceptions in destructors. (Marcus)

- Improved PHP runtime speed and memory usage:
  . Substitute persistent constants by their values at compile time. (Matt)
  . Optimized ZEND_SIGNED_MULTIPLY_LONG() (Matt)
  . Removed direct executor recursion. (Dmitry)
  . Use fastcall calling convention in executor on x86. (Dmitry)